@@ -1,8 +1,8 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from trytond.pool import PoolMeta
+from trytond.pool import PoolMeta, Pool
 
-__all__ = ['PartyReplace']
+__all__ = ['PartyReplace', 'PartyErase']
 
 
 class PartyReplace:
@@ -15,3 +15,33 @@ class PartyReplace:
             ('purchase.product_supplier', 'party'),
             ('purchase.purchase', 'party'),
             ]
+
+
+class PartyErase:
+    __metaclass__ = PoolMeta
+    __name__ = 'party.erase'
+
+    @classmethod
+    def __setup__(cls):
+        super(PartyErase, cls).__setup__()
+        cls._error_messages.update({
+                'pending_purchase': (
+                    'The party "%(party)s" can not be erased '
+                    'because he has pending purchases '
+                    'for the company "%(company)s".'),
+                })
+
+    def check_erase_company(self, party, company):
+        pool = Pool()
+        Purchase = pool.get('purchase.purchase')
+        super(PartyErase, self).check_erase_company(party, company)
+
+        purchases = Purchase.search([
+                ('party', '=', party.id),
+                ('state', 'not in', ['done', 'cancel']),
+                ])
+        if purchases:
+            self.raise_user_error('pending_purchase', {
+                    'party': party.rec_name,
+                    'company': company.rec_name,
+                    })
