@@ -1,3 +1,4 @@
+* Check pending purchase to erase party
 * Add wizard to modify purchase header after filling lines
 * Make description on purchase line optional
 * Add product supplier on purchase line
